<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical" 
        android:layout_gravity="center">
    <TextView
        android:id="@+id/textViewTitleEditAsig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/text_nombre_asignatura"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

     <LinearLayout 
        android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:orientation="horizontal" 
   		android:layout_gravity="right"
   		android:layout_marginBottom="20dp"
   		>
         <TextView
             android:id="@+id/textViewNotaEsperada"
             android:layout_width="0dp"
             android:layout_weight="0.3"
             android:layout_height="wrap_content"
             android:text="@string/text_nota_esperada"
             android:textAppearance="?android:attr/textAppearanceSmall" />

         <EditText
             android:id="@+id/editTextChangeRequerido"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="0.2"
             android:ems="3"
             android:inputType="numberDecimal"
             android:textSize="12sp" >

             <requestFocus />
         </EditText>
	    
	     <Button
	         android:id="@+id/buttonCambiarNotaEsperada"
	         style="?android:attr/buttonStyleSmall"
	         android:layout_width="0dp"
	         android:layout_height="wrap_content"
	         android:layout_weight="0.2"
	         android:minHeight="20dp"
	         android:minWidth="20dp"
	         android:text="@string/textbutton_cambiar"
	         android:textSize="12sp" />

	 </LinearLayout>

	 <LinearLayout 
           android:layout_width="match_parent"
           android:baselineAligned="false"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           >
         <LinearLayout
             android:layout_width="0dp"
             android:layout_weight="0.2"
             android:layout_height="fill_parent"
             android:gravity="center"
             android:orientation="vertical">
		     <TextView
		           android:id="@+id/textViewLabelNotaReq"
		           android:layout_width="wrap_content"
		           android:layout_height="0dp"
		           android:layout_weight="0.6"
		           android:gravity="center"
		           android:text="@string/text_nota_requerida" />
		     <TextView
		           android:id="@+id/textViewNotaRequerida"
		           android:layout_width="wrap_content"
		           android:layout_height="0dp"
		           android:layout_weight="0.4"
		           android:text="@string/number" />
	     </LinearLayout>
	     <LinearLayout
             android:layout_width="0dp"
             android:layout_weight="0.2"
             android:layout_height="fill_parent"
             android:gravity="center"
             android:layout_gravity="center"
             android:orientation="vertical">
		     <TextView
		           android:id="@+id/textViewLabelpromSim"
		           android:layout_width="wrap_content"
		           android:layout_height="0dp"
		           android:layout_weight="0.6"
		           android:gravity="center"
		           android:text="@string/text_nota_simulada" />
		     <TextView
		           android:id="@+id/textViewNotaSimulada"
		           android:layout_width="wrap_content"
		           android:layout_height="0dp"
		           android:layout_weight="0.4"
		           android:text="@string/number" />
	     </LinearLayout>
	        <LinearLayout
             android:layout_width="0dp"
             android:layout_weight="0.2"
             android:layout_height="fill_parent"
             android:gravity="center"
             android:orientation="vertical">
		     <TextView
		           android:id="@+id/textViewLabelDif"
		           android:layout_width="wrap_content"
		           android:layout_height="0dp"
		           android:layout_weight="0.6"
		           android:gravity="center"
		           android:text="@string/text_diferencia" />
		     <TextView
		           android:id="@+id/textViewDiferencia"
		           android:layout_width="wrap_content"
		           android:layout_height="0dp"
		           android:layout_weight="0.4"
		           android:layout_gravity="center"
		           android:text="@string/number" />
	     </LinearLayout>
	     

     </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" 
        android:gravity="center">
        <TextView
            android:id="@+id/textViewPorcentaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_porcentaje_ingresado" />

    </LinearLayout>
    <LinearLayout
         android:id="@+id/row1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center" 
        >
        
    </LinearLayout>

      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center" >

         <Button
             android:id="@+id/buttonRecalcular"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="0dp"
             android:layout_weight="0.3"
             android:layout_height="wrap_content"
             android:text="@string/text_recalcular_promedio" />

          <Button
           android:id="@+id/buttonAddNewEval"
           android:layout_width="0dp"
           android:layout_weight="0.4"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:text="@string/text_nueva_evaluacion" />

          <Button
              android:id="@+id/buttonFinalizarSemestre"
              style="?android:attr/buttonStyleSmall"
              android:layout_width="0dp"
              android:layout_weight="0.3"
              android:layout_height="wrap_content"
              android:text="@string/text_finalizar_semestes" />
         
     </LinearLayout>
   
</LinearLayout>
