<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >
	<LinearLayout 
	        
		    android:layout_width="0dp"
		    android:layout_weight="0.4"
		    android:layout_height="match_parent"
		    android:orientation="vertical" 
		    android:gravity="center"
		    android:padding="10dp">
		   <LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:gravity="left|center_vertical">
		       <TextView
		           android:id="@+id/textViewTitle"
		           android:layout_width="wrap_content"
		           android:layout_height="wrap_content"
		           android:text="@string/text_title_simulador_semestral"
		           android:textAppearance="?android:attr/textAppearanceMedium" />	   
		    </LinearLayout>

		    <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:padding="0dp" >

		        <TextView
		            android:id="@+id/textViewLabelPromAcum"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="0.4"
		            android:text="@string/promedio_deseado"
		            android:textSize="12dp" />

		        <EditText
		            android:id="@+id/editTextPromAcumDeseado"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="0.4"
		            android:ems="10"
		            android:inputType="numberDecimal"
		            android:textSize="12dp" >
		
		            <requestFocus />
		        </EditText>
		
		        <Button
		            android:id="@+id/buttonCambiarAcumDeseado"
		            style="?android:attr/buttonStyleSmall"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:minHeight="35dp"
		            android:minWidth="35dp"
		            android:text="@string/textbutton_cambiar"
		            android:textSize="12dp" />
				   
		    </LinearLayout>

		        <LinearLayout
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:padding="0dp" >
		
		            <TextView
		                android:id="@+id/textViewLabelSemestralRequerido"
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_weight="0.4"
		                android:text="@string/text_promedio_requerido"
		                android:textSize="12dp" />
		
		            <EditText
		                android:id="@+id/editTextPromRequerido"
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_weight="0.4"
		                android:ems="10"
		                android:inputType="numberDecimal"
		                android:textSize="12dp" />
		
		            <Button
		                android:id="@+id/buttonCambiarPromRequerido"
		                style="?android:attr/buttonStyleSmall"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:minHeight="35dp"
		                android:minWidth="35dp"
		                android:text="@string/textbutton_cambiar"
		                android:textSize="12dp" />
				   
		    </LinearLayout>

		  	<LinearLayout
		  	    android:layout_width="fill_parent"
		  	    android:layout_height="wrap_content"
		  	    android:padding="0dp" >
		
		            <TextView
		                android:id="@+id/textViewLabelCreditosCursados"
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_weight="0.4"
		                android:text="@string/creditos_cursados"
		                android:textSize="12dp" />
		
		            <EditText
		                android:id="@+id/editTextCreditosCursados"
		                android:layout_width="0dp"
		                android:layout_height="wrap_content"
		                android:layout_weight="0.4"
		                android:ems="10"
		                android:inputType="number"
		                android:textSize="12dp" />
		
		            <Button
		                android:id="@+id/buttonCambiarCreditos"
		                style="?android:attr/buttonStyleSmall"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:minHeight="35dp"
		                android:minWidth="35dp"
		                android:text="@string/textbutton_cambiar"
		                android:textSize="12dp" />
				   
		    </LinearLayout>  
		
		</LinearLayout>
</LinearLayout>